feat: modulo 3
