# src/modules/accounts/useCases/authenticateUser/AuthenticateUserController.ts
@@ -1,0 +1,21 @@
+import { Response, Request } from "express";
+import { container } from "tsyringe";
+
+import { AuthenticateUserUseCase } from "./AuthenticateUserUseCase";
+
+class AuthenticateUserController {
+  async handle(request: Request, response: Response): Promise<Response> {
+    const { email, password } = request.body;
+
+    const authenticateUserUseCase = container.resolve(AuthenticateUserUseCase);
+
+    const token = await authenticateUserUseCase.execute({
+      email,
+      password,
+    });
+
+    return response.json(token);
+  }
+}
+
+export { AuthenticateUserController };
