# src/modules/accounts/useCases/createUser/CreateUserController.ts
@@ -1,0 +1,23 @@
+import { Response, Request } from "express";
+import { container } from "tsyringe";
+import { CreateUserUseCase } from "./CreateUserUseCase";
+
+class CreateUserController {
+  async handle(request: Request, response: Response): Promise<Response> {
+    const { driver_license, email, is_admin, name, password } = request.body;
+
+    const createUserUseCase = container.resolve(CreateUserUseCase);
+
+    await createUserUseCase.execute({
+      driver_license,
+      email,
+      is_admin,
+      name,
+      password,
+    });
+
+    return response.status(201).send();
+  }
+}
+
+export { CreateUserController };
