# src/routes/categories.routes.ts
@@ -1,26 +1,31 @@
 import { Router } from "express";
 import multer from "multer";
+import ensureAuthentication from "../middlewares/ensureAuthenticated";
+
+import { CreateCategoryController } from "../modules/cars/useCases/CreateCategory/CreateCategoryController";
+import { ImportCategoryController } from "../modules/cars/useCases/ImportCategory/ImportCategoryController";
+import { ListCategoryController } from "../modules/cars/useCases/ListCategory/ListCategoryController";
 
 const upload = multer({
   dest: "./tmp",
 });
 
-import { createCategoryController } from "../modules/cars/useCases/CreateCategory";
-import { importCategoryController } from "../modules/cars/useCases/ImportCategory";
-import { listCategoryController } from "../modules/cars/useCases/ListCategory";
-
 const categoriesRoutes = Router();
 
-categoriesRoutes.post("/", (request, response) => {
-  return createCategoryController.handle(request, response);
-});
+const createCategoryController = new CreateCategoryController();
+const importCategoryController = new ImportCategoryController();
+const listCategoryController = new ListCategoryController();
 
-categoriesRoutes.get("/", (request, response) => {
-  return listCategoryController.handle(request, response);
-});
+categoriesRoutes.use(ensureAuthentication);
 
-categoriesRoutes.post("/import", upload.single("file"), (request, response) => {
-  return importCategoryController.handle(request, response);
-});
+categoriesRoutes.post("/", createCategoryController.handle);
+
+categoriesRoutes.get("/", listCategoryController.handle);
+
+categoriesRoutes.post(
+  "/import",
+  upload.single("file"),
+  importCategoryController.handle,
+);
 
 export default categoriesRoutes;
