# src/routes/index.ts
@@ -1,10 +1,14 @@
 import { Router } from "express";
+import authenticationRoutes from "./authenticate.routes";
 import categoriesRoutes from "./categories.routes";
 import specificationsRoutes from "./specifications.routes";
+import usersRoutes from "./users.routes";
 
 const router = Router();
 
 router.use("/categories", categoriesRoutes);
 router.use("/specifications", specificationsRoutes);
+router.use("/users", usersRoutes);
+router.use("/session", authenticationRoutes);
 
 export { router };
