# src/routes/users.routes.ts
@@ -1,0 +1,26 @@
+import { Router } from "express";
+import multer from "multer";
+
+import { CreateUserController } from "../modules/accounts/useCases/createUser/CreateUserController";
+import { UpdateUserAvatarController } from "../modules/accounts/useCases/updateUserAvatar/UpdateUserAvatarController";
+import uploadConfig from "../config/upload";
+import ensureAuthentication from "../middlewares/ensureAuthenticated";
+
+const usersRoutes = Router();
+
+const uploadAvatar = multer(uploadConfig.upload("./tmp/avatar"));
+
+const createUserController = new CreateUserController();
+const updateUserAvatarController = new UpdateUserAvatarController();
+
+usersRoutes.post("/", createUserController.handle);
+
+usersRoutes.use(ensureAuthentication);
+
+usersRoutes.patch(
+  "/avatar",
+  uploadAvatar.single("avatar"),
+  updateUserAvatarController.handle,
+);
+
+export default usersRoutes;
